@startuml
!include https://raw.githubusercontent.com/patrik-csak/one-dark-plantuml-theme/v1.0.1/theme.puml

class ConfigDevice {
    string name
    string type
}

class ConfigController {
    string name
    string type
    string actuator
    int time1
    int time2
}

class DataValue {
    string name
    variant value
}

class IDataHeader {
    +virtual iterator begin() = 0
    +virtual iterator end() = 0
    +virtual const string& getTableName() const = 0
}

class DataHeader {
    -string tableName
    +void setValue<T>(const string& name, T value)
    +T getValue<T>(const string& name) const
    +const string& getTableName() const
}

class TableConfigDevice {
}

class TableConfigController {
}

TableConfigDevice --|> DataHeader
TableConfigDevice --> ConfigDevice : uses
TableConfigController --|> DataHeader
TableConfigController --> ConfigController : uses
DataHeader --|> IDataHeader
DataHeader *-- DataValue : values


class SqlInsert {
}

class SqlIterator {
}

class SourceSqlite {
    -createSql()
    -insertSql()
    -selectSql()

    begin()
    insert()
}

SourceSqlite --> SqlInsert : uses
SourceSqlite --> SqlIterator : uses
SourceSqlite --> IDataHeader : uses


@enduml